grid and skeleton of page added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
 <head>
 	<title>Raul F. Mansur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel="stylesheet" type="text/css" href="css/grid.css">
 </head>
 <body>
-
+	<div class="columns">
+		<div class="column">
+			Coluna 1 Header
+		</div>
+		<div class="column">
+			Coluna 2 Header
+		</div>
+	</div>
+	<div>
+		Informações de Contato
+	</div>
+	<div class="columns">
+		<div class="column">
+			Coluna 1 Formação Acadêmica		
+		</div>
+		<div class="column">
+			Coluna 2 Alguns Projetos	
+		</div>
+	</div>
+	<div class="columns">
+		<div class="column">
+			Coluna 1 Certificados e Conquistas		
+		</div>
+		<div class="column">
+			Coluna 2 Interesses e Hobbies
+		</div>
+	</div>	
+	<div class="columns">
+		<div class="column">
+			Coluna 1 Skils Gerais		
+		</div>
+		<div class="column">
+			Coluna 2 Proficiência em Linguagens
+		</div>
+	</div>	
 </body>
 </html>
