Esqueleto de conteúdo criado

--- a/index.html
+++ b/index.html
@@ -8,37 +8,132 @@
 <body>
 	<div class="columns">
 		<div class="column">
-			Coluna 1 Header
+			<img src="http://placehold.jp/180x180.png">
+			<h1>Raul Formiga Mansur</h1>	
+			<h2>Developer</h2>	
 		</div>
 		<div class="column">
-			Coluna 2 Header
+			<h1>Sobre mim</h1>
+			<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec dapibus dictum auctor in non commodo eleifend, sollicitudin potenti tristique nec rhoncus nunc nulla sociosqu eleifend neque. aliquam aenean pulvinar mollis bibendum urna libero vehicula sagittis mollis, venenatis taciti ullamcorper facilisis sapien erat lobortis ultrices tincidunt, sollicitudin nisl massa neque etiam suscipit varius congue. nunc potenti feugiat adipiscing suscipit mattis netus, leo cubilia gravida bibendum suscipit pharetra, nullam feugiat tellus class taciti. at mattis pulvinar egestas fames vel suspendisse, habitant morbi ut augue leo commodo, sagittis inceptos nisl tempor sapien. </p>
 		</div>
 	</div>
 	<div>
-		Informações de Contato
+		<h1>Informações de Contato</h1>
+		<ul>
+			<li>Telefone: (31)98236-1299</li>
+			<li>Email: raulfmansur@hotmail.com</li>
+			<li>Github: raul4247</li>
+			<li>Linkedin: raul-mansur</li>
+		</ul>
 	</div>
 	<div class="columns">
 		<div class="column">
-			Coluna 1 Formação Acadêmica		
+			<h1>Formação Acadêmica</h1>
+			<ul>
+				<li>
+					<p>2015-2017</p>
+					<p>Ensino Médio/Colégio Técnico da Universidade Federal de Minas Gerais:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>2015-2017</p>
+					<p>Curso Técnico de Informática/Colégio Técnico da Universidade Federal de Minas Gerais:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>2018-Atualmente</p>
+					<p>Bacharelado em Ciência da Computação/Pontifícia Universidade Católica de Minas Gerais:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+			</ul>
 		</div>
 		<div class="column">
-			Coluna 2 Alguns Projetos	
+			<h1>Alguns Projetos</h1>
+			<ul>
+				<li>
+					<p>2017</p>
+					<p>Pakot:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>2017</p>
+					<p>Competição Cora:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>2018</p>
+					<p>Vem de Zap:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="columns">
 		<div class="column">
-			Coluna 1 Certificados e Conquistas		
+			<h1>Certificados e Conquistas</h1>
+			<ul>
+				<li>
+					<p>2016</p>
+					<p>Relevancia Acadêmica PIC JR:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>2017</p>
+					<p>3 Lugar na Competição Cora:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+			</ul>
 		</div>
 		<div class="column">
-			Coluna 2 Interesses e Hobbies
+			<h1>Interesses e Hobbies</h1>
+			<ul>
+				<li>
+					<p>Programação:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>Novas linguagens e Tecnologias:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>Embarcados:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+				<li>
+					<p>Elétrica:</p>
+					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+				</li>
+			</ul>
 		</div>
-	</div>	
+	</div>
 	<div class="columns">
 		<div class="column">
-			Coluna 1 Skils Gerais		
+			<h1>Skils Gerais</h1>
+			<ul>
+				<li>Desenvolvimento Web</li>
+				<li>Desenvolvimento Desktop</li>
+				<li>Linux + Shell</li>
+				<li>Embarcados</li>
+			</ul>
 		</div>
 		<div class="column">
-			Coluna 2 Proficiência em Linguagens
+			<h1>Linguagens de Programação</h1>
+			<ul>
+				<li>Javascript</li>
+				<li>PHP</li>
+				<li>Python</li>
+				<li>Java</li>
+				<li>C/C++</li>
+				<li>HTML</li>
+				<li>CSS</li>
+			</ul>
+		</div>
+		<div class="column">
+			<h1>Proficiência em Línguas</h1>
+			<ul>
+				<li>Português</li>
+				<li>Inglês</li>
+			</ul>
 		</div>
 	</div>	
 </body>
