adição de conteúdo e reorganização de colunas

--- a/index.html
+++ b/index.html
@@ -3,138 +3,143 @@
 <head>
 	<title>Raul F. Mansur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="stylesheet" type="text/css" href="css/grid.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+	<link rel="stylesheet" type="text/css" href="css/media_queries.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<div class="columns">
-		<div class="column">
-			<img src="http://placehold.jp/180x180.png">
-			<h1>Raul Formiga Mansur</h1>	
-			<h2>Developer</h2>	
+	<div class="container">
+		<div class="columns">
+			<div class="column has-text-centered">
+				<img class="profile-pic" src="http://placehold.jp/256x256.png">
+				<h1>Raul Formiga Mansur</h1>	
+				<h2>Developer</h2>	
+			</div>
+			<div class="column about-section">
+				<div class="about-content">
+					<h1>Sobre mim</h1>
+					<p>Técnico formado em Informática e Desenvolvimento de Sistemas pelo Colégio Técnico da UFMG (COLTEC), e estudante de Ciência da Computação na PUC Minas(2018-Atualmente). Web developer versátil, com conhecimentos em frontend, backend, e frameworks. Programador Java, C, Python, e autodidata de novas tecnologias de programação nas horas vagas.</p>
+					<h1>Informações de Contato</h1>
+					<ul>
+						<li>Telefone: (31)98236-1299</li>
+						<li>Email: raulfmansur@hotmail.com</li>
+						<li>Github: raul4247</li>
+						<li>Linkedin: raul-mansur</li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div class="column">
-			<h1>Sobre mim</h1>
-			<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec dapibus dictum auctor in non commodo eleifend, sollicitudin potenti tristique nec rhoncus nunc nulla sociosqu eleifend neque. aliquam aenean pulvinar mollis bibendum urna libero vehicula sagittis mollis, venenatis taciti ullamcorper facilisis sapien erat lobortis ultrices tincidunt, sollicitudin nisl massa neque etiam suscipit varius congue. nunc potenti feugiat adipiscing suscipit mattis netus, leo cubilia gravida bibendum suscipit pharetra, nullam feugiat tellus class taciti. at mattis pulvinar egestas fames vel suspendisse, habitant morbi ut augue leo commodo, sagittis inceptos nisl tempor sapien. </p>
+		<div class="columns">
+			<div class="column">
+				<h1>Formação Acadêmica</h1>
+				<ul>
+					<li>
+						<h3>2015-2017</h3>
+						<h4>Ensino Médio</h4>
+						<p>Colégio Técnico da Universidade Federal de Minas Gerais:</p>
+						<p>Formado no 2º grau (ensino médio) em 2017.</p>
+					</li>
+					<li>
+						<h3>2015-2017</h3>
+						<h4>Curso Técnico de Informática</h4>
+						<p>Colégio Técnico da Universidade Federal de Minas Gerais:</p>
+						<p>Formado como técnico em Informática e Desenvolvimento de Sistemas em 2017.</p>
+					</li>
+					<li>
+						<h3>2018-Atualmente</h3>
+						<h4>Bacharelado em Ciência da Computação</h4>
+						<p>Estudante de Ciência da Computação na Pontifícia Universidade Católica de Minas Gerais (PUC MINAS) desde 2018.</p>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<h1>Alguns Projetos</h1>
+				<ul>
+					<h3>2017</h3>
+					<li>
+						<h4>Pakot:</h4>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+					<li>
+						<h4>Competição Cora:</h4>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+					<h3>2018</h3>
+					<li>
+						<h4>Vem de Zap:</h4>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="columns">
+			<div class="column">
+				<h1>Certificados e Conquistas</h1>
+				<ul>
+					<h3>2016</h3>
+					<li>
+						<h4>Relevancia Acadêmica PIC JR:</h4>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+					<h3>2017</h3>
+					<li>
+						<h4>3º Lugar na Competição Cora:</h4>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<h1>Interesses e Hobbies</h1>
+				<ul>
+					<li>
+					<h3>Programação:</h3>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+					<li>
+						<h3>Novas linguagens e Tecnologias:</h3>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+					<li>
+						<h3>Embarcados:</h3>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+					<li>
+						<h3>Elétrica:</h3>
+						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="columns">
+			<div class="column">
+				<h1>Skils Gerais</h1>
+				<ul>
+					<li>Desenvolvimento Web</li>
+					<li>Desenvolvimento Desktop</li>
+					<li>Linux + Shell</li>
+					<li>Embarcados</li>
+				</ul>
+			</div>
+			<div class="column">
+				<h1>Linguagens de Programação</h1>
+				<ul>
+					<li>Javascript</li>
+					<li>PHP</li>
+					<li>Python</li>
+					<li>Java</li>
+					<li>C/C++</li>
+					<li>HTML</li>
+					<li>CSS</li>
+				</ul>
+			</div>
+			<div class="column">
+				<h1>Proficiência em Línguas</h1>
+				<ul>
+					<li>Português</li>
+					<li>Inglês</li>
+				</ul>
+			</div>
 		</div>
 	</div>
-	<div>
-		<h1>Informações de Contato</h1>
-		<ul>
-			<li>Telefone: (31)98236-1299</li>
-			<li>Email: raulfmansur@hotmail.com</li>
-			<li>Github: raul4247</li>
-			<li>Linkedin: raul-mansur</li>
-		</ul>
-	</div>
-	<div class="columns">
-		<div class="column">
-			<h1>Formação Acadêmica</h1>
-			<ul>
-				<li>
-					<p>2015-2017</p>
-					<p>Ensino Médio/Colégio Técnico da Universidade Federal de Minas Gerais:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>2015-2017</p>
-					<p>Curso Técnico de Informática/Colégio Técnico da Universidade Federal de Minas Gerais:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>2018-Atualmente</p>
-					<p>Bacharelado em Ciência da Computação/Pontifícia Universidade Católica de Minas Gerais:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-			</ul>
-		</div>
-		<div class="column">
-			<h1>Alguns Projetos</h1>
-			<ul>
-				<li>
-					<p>2017</p>
-					<p>Pakot:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>2017</p>
-					<p>Competição Cora:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>2018</p>
-					<p>Vem de Zap:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div class="columns">
-		<div class="column">
-			<h1>Certificados e Conquistas</h1>
-			<ul>
-				<li>
-					<p>2016</p>
-					<p>Relevancia Acadêmica PIC JR:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>2017</p>
-					<p>3 Lugar na Competição Cora:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-			</ul>
-		</div>
-		<div class="column">
-			<h1>Interesses e Hobbies</h1>
-			<ul>
-				<li>
-					<p>Programação:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>Novas linguagens e Tecnologias:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>Embarcados:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-				<li>
-					<p>Elétrica:</p>
-					<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-				</li>
-			</ul>
-		</div>
-	</div>
-	<div class="columns">
-		<div class="column">
-			<h1>Skils Gerais</h1>
-			<ul>
-				<li>Desenvolvimento Web</li>
-				<li>Desenvolvimento Desktop</li>
-				<li>Linux + Shell</li>
-				<li>Embarcados</li>
-			</ul>
-		</div>
-		<div class="column">
-			<h1>Linguagens de Programação</h1>
-			<ul>
-				<li>Javascript</li>
-				<li>PHP</li>
-				<li>Python</li>
-				<li>Java</li>
-				<li>C/C++</li>
-				<li>HTML</li>
-				<li>CSS</li>
-			</ul>
-		</div>
-		<div class="column">
-			<h1>Proficiência em Línguas</h1>
-			<ul>
-				<li>Português</li>
-				<li>Inglês</li>
-			</ul>
-		</div>
-	</div>	
 </body>
 </html>
