--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
 	<div class="container">
-		<div class="columns">
+		<div class="columns header-section">
 			<div class="column has-text-centered">
-				<img class="profile-pic" src="http://placehold.jp/256x256.png">
+				<img class="profile-pic" src="imgs/profile.png">
 				<h1>Raul Formiga Mansur</h1>	
 				<h2>Developer</h2>	
 			</div>
 			<div class="column about-section">
 				<div class="about-content">
 					<h1>Sobre mim</h1>
-					<p>Técnico formado em Informática e Desenvolvimento de Sistemas pelo Colégio Técnico da UFMG (COLTEC), e estudante de Ciência da Computação na PUC Minas(2018-Atualmente). Web developer versátil, com conhecimentos em frontend, backend, e frameworks. Programador Java, C, Python, e autodidata de novas tecnologias de programação nas horas vagas.</p>
+					<p>Técnico formado em Informática e Desenvolvimento de Sistemas e estudante de Ciência da Computação. Web developer versátil, com conhecimentos em frontend, backend, e frameworks. Programador Java, C, Python, e autodidata nas horas vagas.</p>
+					<br><br>
 					<h1>Informações de Contato</h1>
 					<ul>
 						<li>Telefone: (31)98236-1299</li>
@@ -29,88 +30,83 @@
 				</div>
 			</div>
 		</div>
-		<div class="columns">
-			<div class="column">
-				<h1>Formação Acadêmica</h1>
-				<ul>
-					<li>
-						<h3>2015-2017</h3>
-						<h4>Ensino Médio</h4>
-						<p>Colégio Técnico da Universidade Federal de Minas Gerais:</p>
-						<p>Formado no 2º grau (ensino médio) em 2017.</p>
-					</li>
-					<li>
-						<h3>2015-2017</h3>
-						<h4>Curso Técnico de Informática</h4>
-						<p>Colégio Técnico da Universidade Federal de Minas Gerais:</p>
-						<p>Formado como técnico em Informática e Desenvolvimento de Sistemas em 2017.</p>
-					</li>
-					<li>
-						<h3>2018-Atualmente</h3>
-						<h4>Bacharelado em Ciência da Computação</h4>
-						<p>Estudante de Ciência da Computação na Pontifícia Universidade Católica de Minas Gerais (PUC MINAS) desde 2018.</p>
-					</li>
-				</ul>
+			<div class="columns main-section">
+				<div class="column">
+					<h1>Formação Acadêmica</h1>
+					<ul>
+						<li>
+							<h3>2010-2015</h3>
+							<h4>Curso de Inglês</h4>
+							<p>Curso completo de inglês [Nível Avançado] na escola Number One Idiomas.</p>
+						</li>
+						<li>
+							<h3>2015-2017</h3>
+							<h4>Curso Técnico Integrado de Informática</h4>
+							<p>Colégio Técnico da Universidade Federal de Minas Gerais:</p>
+							<p>Formado como técnico em Informática e Desenvolvimento de Sistemas em 2017.</p>
+						</li>
+						<li>
+							<h3>2018-Atualmente</h3>
+							<h4>Bacharelado em Ciência da Computação</h4>
+							<p>Estudante de Ciência da Computação na Pontifícia Universidade Católica de Minas Gerais (PUC MINAS) desde 2018.</p>
+						</li>
+					</ul>
+				</div>
+				<div class="column">
+					<h1>Alguns Projetos</h1>
+					<ul>
+						<h3>2017</h3>
+						<li>
+							<h4>Competição Cora:</h4>
+							<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
+						</li>
+						<li>
+							<h4>Pakot:</h4>
+							<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
+						</li>
+						<h3>2018</h3>
+						<li>
+							<h4>Vem de Zap:</h4>
+							<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
+						</li>
+					</ul>
+				</div>
 			</div>
-			<div class="column">
-				<h1>Alguns Projetos</h1>
-				<ul>
-					<h3>2017</h3>
-					<li>
-						<h4>Pakot:</h4>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-					<li>
-						<h4>Competição Cora:</h4>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-					<h3>2018</h3>
-					<li>
-						<h4>Vem de Zap:</h4>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-				</ul>
+			<div class="columns main-section">
+				<div class="column">
+					<h1>Certificados e Conquistas</h1>
+					<ul>
+						<h3>2016</h3>
+						<li>
+							<h4>Relevancia Acadêmica PIC JR:</h4>
+							<p>Co-participação no projeto Desenvolvimento e Aplicação de Hardware em Sistemas Embarcados com orientação do professor Leandro Maia na UFMG.</p>
+						</li>
+						<h3>2017</h3>
+						<li>
+							<h4>3º Lugar na Competição CORA:</h4>
+							<p>Participação da equipe MRPCJ (3º lugar) na Competição de Robôs Autônomos (robôs seguidores de linha) promovida pela Engenharia Elétrica - UFMG.</p>
+						</li>
+					</ul>
+				</div>
+				<div class="column">
+					<h1>Interesses e Hobbies</h1>
+					<ul>
+						<li>
+						<h3>Programação:</h3>
+							<p>Programador apaixonado desde 2015, e com experiência em várias linguagens de programação.</p>
+						</li>
+						<li>
+							<h3>Novas linguagens e Tecnologias:</h3>
+							<p>Autodidata e aventureiro em novas frameworks, linguagens e tecnologias no tempo livre.</p>
+						</li>
+						<li>
+							<h3>Embarcados e Eletrônica:</h3>
+							<p>Entusiasta e amador com desenvolvimento, prototipagem e soldagem de circuitos eletrônicos e embarcados.</p>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</div>
-		<div class="columns">
-			<div class="column">
-				<h1>Certificados e Conquistas</h1>
-				<ul>
-					<h3>2016</h3>
-					<li>
-						<h4>Relevancia Acadêmica PIC JR:</h4>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-					<h3>2017</h3>
-					<li>
-						<h4>3º Lugar na Competição Cora:</h4>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-				</ul>
-			</div>
-			<div class="column">
-				<h1>Interesses e Hobbies</h1>
-				<ul>
-					<li>
-					<h3>Programação:</h3>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-					<li>
-						<h3>Novas linguagens e Tecnologias:</h3>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-					<li>
-						<h3>Embarcados:</h3>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-					<li>
-						<h3>Elétrica:</h3>
-						<p>Lorem ipsum at pharetra arcu eros convallis platea pretium erat sit class, tortor fusce auctor curae donec.</p>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<div class="columns">
+		<div class="columns footer-section">
 			<div class="column">
 				<h1>Skils Gerais</h1>
 				<ul>
