--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="css/media_queries.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
@@ -30,82 +31,102 @@
 				</div>
 			</div>
 		</div>
-			<div class="columns main-section">
-				<div class="column">
-					<h1>Formação Acadêmica</h1>
-					<ul>
-						<li>
-							<h3>2010-2015</h3>
-							<h4>Curso de Inglês</h4>
-							<p>Curso completo de inglês [Nível Avançado] na escola Number One Idiomas.</p>
-						</li>
-						<li>
-							<h3>2015-2017</h3>
-							<h4>Curso Técnico Integrado de Informática</h4>
-							<p>Colégio Técnico da Universidade Federal de Minas Gerais:</p>
-							<p>Formado como técnico em Informática e Desenvolvimento de Sistemas em 2017.</p>
-						</li>
-						<li>
-							<h3>2018-Atualmente</h3>
-							<h4>Bacharelado em Ciência da Computação</h4>
-							<p>Estudante de Ciência da Computação na Pontifícia Universidade Católica de Minas Gerais (PUC MINAS) desde 2018.</p>
-						</li>
-					</ul>
+		<div class="columns main-section">
+			<div class="column">
+				<h1 class="has-text-centered"><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h1>
+				<br>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2010-2015</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>Curso de Inglês [Avançado]</h4>
+						<p>Curso de Inglês nível avançado (Number One Idiomas).</p>
+					</div>
 				</div>
-				<div class="column">
-					<h1>Alguns Projetos</h1>
-					<ul>
-						<h3>2017</h3>
-						<li>
-							<h4>Competição Cora:</h4>
-							<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
-						</li>
-						<li>
-							<h4>Pakot:</h4>
-							<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
-						</li>
-						<h3>2018</h3>
-						<li>
-							<h4>Vem de Zap:</h4>
-							<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
-						</li>
-					</ul>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2015-2017</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>Curso Técnico Integrado de Informática</h4>
+						<p>Técnico em Informática e Desenvolvimento de Sistemas (COLTEC UFMG).</p>
+					</div>
+				</div>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2018-Atual</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>Bacharelado em Ciência da Computação</h4>
+						<p>Ciência da Computação (PUC MINAS).</p>
+					</div>
 				</div>
 			</div>
-			<div class="columns main-section">
-				<div class="column">
-					<h1>Certificados e Conquistas</h1>
-					<ul>
-						<h3>2016</h3>
-						<li>
-							<h4>Relevancia Acadêmica PIC JR:</h4>
-							<p>Co-participação no projeto Desenvolvimento e Aplicação de Hardware em Sistemas Embarcados com orientação do professor Leandro Maia na UFMG.</p>
-						</li>
-						<h3>2017</h3>
-						<li>
-							<h4>3º Lugar na Competição CORA:</h4>
-							<p>Participação da equipe MRPCJ (3º lugar) na Competição de Robôs Autônomos (robôs seguidores de linha) promovida pela Engenharia Elétrica - UFMG.</p>
-						</li>
-					</ul>
+			<div class="column">
+				<h1 class="has-text-centered"><i class="fas fa-folder"></i> Projetos</h1>
+				<br>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2017-2017</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>Competição Cora:</h4>
+						<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
+						<br>
+						<h4>Pakot:</h4>
+						<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
+					</div>						
 				</div>
-				<div class="column">
-					<h1>Interesses e Hobbies</h1>
-					<ul>
-						<li>
-						<h3>Programação:</h3>
-							<p>Programador apaixonado desde 2015, e com experiência em várias linguagens de programação.</p>
-						</li>
-						<li>
-							<h3>Novas linguagens e Tecnologias:</h3>
-							<p>Autodidata e aventureiro em novas frameworks, linguagens e tecnologias no tempo livre.</p>
-						</li>
-						<li>
-							<h3>Embarcados e Eletrônica:</h3>
-							<p>Entusiasta e amador com desenvolvimento, prototipagem e soldagem de circuitos eletrônicos e embarcados.</p>
-						</li>
-					</ul>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2018-2018</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>Vem de Zap:</h4>
+						<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
+					</div>
 				</div>
 			</div>
+		</div>
+		<div class="columns main-section">
+			<div class="column">
+				<h1 class="has-text-centered"><i class="fas fa-trophy"></i> Certificados e Conquistas</h1>
+				<br>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2015-2016</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>Relevancia Acadêmica PIC JR:</h4>
+						<p>Co-participação no projeto Desenvolvimento e Aplicação de Hardware em Sistemas Embarcados com orientação do professor Leandro Maia na UFMG.</p>
+					</div>
+				</div>
+				<div class="columns">
+					<div class="column dates">
+						<h3>2017-2017</h3>
+					</div>
+					<div class="column is-two-thirds">
+						<h4>3º Lugar na Competição CORA:</h4>
+						<p>Participação da equipe MRPCJ (3º lugar) na Competição de Robôs Autônomos (robôs seguidores de linha) promovida pela Engenharia Elétrica - UFMG.</p>
+					</div>
+				</div>
+			</div>
+			<div class="column">
+				<h1 class="has-text-centered"><i class="fas fa-laptop"></i> Interesses e Hobbies</h1>
+				<br>
+				<div class="interests">
+					<h3>Programação:</h3>
+					<p>Programador apaixonado desde 2015, e com experiência em várias linguagens de programação.</p>
+					<br>
+					<h3>Novas linguagens e Tecnologias:</h3>
+					<p>Autodidata e aventureiro em novas frameworks, linguagens e tecnologias no tempo livre.</p>
+					<br>
+					<h3>Embarcados e Eletrônica:</h3>
+					<p>Entusiasta e amador com desenvolvimento, prototipagem e soldagem de circuitos eletrônicos e embarcados.</p>
+				</div>
+			</div>
+		</div>
 		<div class="columns footer-section">
 			<div class="column">
 				<h1>Skils Gerais</h1>
