fonts style changed

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
 					<p>Técnico formado em Informática e Desenvolvimento de Sistemas e estudante de Ciência da Computação. Web developer versátil, com conhecimentos em frontend, backend, e frameworks. Programador Java, C, Python, e autodidata nas horas vagas.</p>
 					<br><br>
 					<h1>Informações de Contato</h1>
-					<ul>
-						<li>Telefone: (31)98236-1299</li>
-						<li>Email: raulfmansur@hotmail.com</li>
-						<li>Github: raul4247</li>
-						<li>Linkedin: raul-mansur</li>
-					</ul>
+						<p>Telefone: (31)98236-1299</p>
+						<p>Email: raulfmansur@hotmail.com</p>
+						<p>Github: raul4247</p>
+						<p>Linkedin: raul-mansur</p>
 				</div>
 			</div>
 		</div>
