--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/media_queries.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-	<link rel="icon" href="imgs/ico.png">
+	<link rel="icon" href="imgs/favicon.png">
 </head>
 <body>
 	<div class="container">
@@ -23,10 +23,10 @@
 					<p>Técnico formado em Informática e Desenvolvimento de Sistemas e estudante de Ciência da Computação. Web developer versátil, com conhecimentos em frontend, backend, e frameworks. Programador Java, C, Python, e autodidata nas horas vagas.</p>
 					<br><br>
 					<h1>Informações de Contato</h1>
-						<p>Telefone: (31)98236-1299</p>
-						<p>Email: raulfmansur@hotmail.com</p>
-						<p>Github: raul4247</p>
-						<p>Linkedin: raul-mansur</p>
+						<p><i class="fas fa-mobile-alt"></i> &nbsp; (31) 98236-1299</p>
+						<p><i class="fas fa-envelope"></i> &nbsp;raulfmansur@hotmail.com</p>
+						<p><i class="fab fa-github-square"></i> &nbsp;<a class="link-header" href="https://github.com/raul4247" target="blank">raul4247</a></p>
+						<p><i class="fab fa-linkedin-in"></i> &nbsp;<a class="link-header" href="https://www.linkedin.com/in/raul-mansur" target="blank">raul-mansur</a></p>
 				</div>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 						<h3>2010-2015</h3>
 					</div>
 					<div class="column is-two-thirds">
-						<h4>Curso de Inglês [Avançado]</h4>
+						<h4>Curso de Inglês (Avançado)</h4>
 						<p>Curso de Inglês nível avançado (Number One Idiomas).</p>
 					</div>
 				</div>
@@ -71,10 +71,10 @@
 					</div>
 					<div class="column is-two-thirds">
 						<h4>Competição Cora:</h4>
-						<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG.</p>
+						<p>Competição de robôs seguidores de linha promovida pela Engenharia Elétrica - UFMG. [<a href="https://www.facebook.com/UFMGcora/" target="blank">Facebook</a>]</p>
 						<br>
 						<h4>Pakot:</h4>
-						<p>Plataforma web que simula um serviço de entregas de pacotes.</p>
+						<p>Plataforma web que simula um serviço de entregas de pacotes. [<a href="https://www.usepakot.com/" target="blank">Projeto</a>][<a href="https://github.com/gustavo-depaula/pakot-backend" target="blank">Github</a>]</p>
 					</div>						
 				</div>
 				<div class="columns">
@@ -83,7 +83,7 @@
 					</div>
 					<div class="column is-two-thirds">
 						<h4>Vem de Zap:</h4>
-						<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap".</p>
+						<p>Site gerador de mensagens com integração ao Whats App, a partir da brincadeira "vem de zap". [<a href="http://vem-de-zap.herokuapp.com" target="blank">Projeto</a>][<a href="https://github.com/raul4247/VemDeZap" target="blank">Github</a>]</p>
 					</div>
 				</div>
 			</div>
